--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,7 +61,7 @@
       height: 21px;
       width: 24px;
       margin-top: 4px;
-      @include mixins.backgr('../../assets/svg/shopping_basket.svg');
+      @include mixins.backgrfix('../../assets/svg/shopping_basket.svg');
     }
 
     .headerBasketCount {
